added more api features

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    
+    <p>This site implements a demo REST API for food shops. You can start by looking
+    at the types of food at <a href="/foodtypes">/foodtypes</a> or a list of shops at
+    <a href="/stores">/stores</a>.</p>
   </body>
 </html>
